Add docker-compose and refactor Chroma/Qdrant vector stores
Introduces a docker-compose.yaml for local ChromaDB and Qdrant services. Refactors ChromaVectorStore and QdrantVectorStore to improve backend import handling, collection management, and filter compilation. Removes unnecessary model passing and streamlines error handling and client initialization.

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,12 @@ venv
 CLAUDE.md
 
 keys/*
+
+### Vector Store Data ###
+.data/
+
+### Qdrant DB ###
+qdrant_data/
+
+### Chroma DB ###
+chroma_data/
