Add ollama to LLM providers and all dependencies
Introduced a new 'llm-providers' dependency group in pyproject.toml, including 'openai' and 'ollama'. Also added 'ollama' to the 'all' dependency group to support additional LLM provider options.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,12 @@ vector-stores = [
     "pymongo>=4.6.0",
 ]
 
+# LLM providers
+llm-providers = [
+    "openai>=1.0.0",
+    "ollama~=0.6.0",
+]
+
 # Development
 dev = [
     "pytest>=7.0.0",
@@ -41,6 +47,7 @@ dev = [
 all = [
     "openai>=1.0.0",
     "cohere>=5.0.0",
+    "ollama~=0.6.0",
     "sentence-transformers>=2.2.0",
     "chromadb>=0.4.0",
     "qdrant-client>=1.7.0",
